created sample app shown on site

--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -1,2 +1,4 @@
 <link rel="import" href="yo-list/yo-list.html">
 <link rel="import" href="yo-greeting/yo-greeting.html">
+<link rel="import" href="post-card/post-card.html">
+<link rel="import" href="post-list/post-list.html">
