added map-tour example

--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -2,3 +2,5 @@
 <link rel="import" href="yo-greeting/yo-greeting.html">
 <link rel="import" href="post-card/post-card.html">
 <link rel="import" href="post-list/post-list.html">
+<link rel="import" href="map-tour/map-tour.html">
+<link rel="import" href="../bower_components/x-2048/x-2048.html">
